# home_exercice_data_eng_serv

./: README.md  ad_hoc.py  pyproject.toml  run.py
docs/: clinical_trials.csv  drugs.csv  pubmed.csv  pubmed.json
outputs/: references.json
servier/data_sources/: drugs.py  pubs.py  trials.py
servier/data_targets/: references.py
servier/lib/: text.py
servier/lib/data_sources/: csv.py
servier/lib/io/: csv.py  json.py
servier/transformations/: references.py  relationships.py
tests/lib/: test_text.py
tests/lib/test_io/: test_csv.py
tests/test_transformations/: test_relationships.py
