[tool.poetry]
name = "servier"
version = "0.1.0"
description = ""
authors = ["Zineb Lamrani <lamrani@taoussia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pandas = "^2.2.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
